<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:layoutDirection="rtl"
    tools:context="com.example.myfinalproject.">

    <LinearLayout
        android:id="@+id/topBar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_64dp"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingHorizontal="@dimen/size_16dp"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/btnBack"
            android:layout_width="@dimen/size_32dp"
            android:layout_height="@dimen/size_32dp"
            android:layout_marginStart="@dimen/size_16dp"
            android:src="@drawable/rightarrow" />

        <TextView
            android:id="@+id/tvAddAppTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/add_appointment_title"
            android:textColor="@color/title_text"
            android:textSize="@dimen/size_text24sp"
            android:textStyle="bold"
            android:fontFamily="serif" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/topBar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/size_16dp">

            <TextView
                android:id="@+id/tvAddDesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_32dp"
                android:fontFamily="serif"
                android:text="@string/add_appointment_desc"
                android:textColor="@color/title_text"
                android:textSize="@dimen/size_text16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/tvSubjectLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_16dp"
                android:text="@string/appointment_subject"
                android:textColor="@color/hit600_text"
                android:textSize="@dimen/size_text16sp"
                android:textStyle="bold"
                android:fontFamily="serif"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvAddDesc" />

            <EditText
                android:id="@+id/etSubject"
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_56dp"
                android:hint="@string/appointment_subject_hint"
                android:gravity="center_vertical"
                android:inputType="text"
                android:background="@drawable/edit_background"
                android:paddingStart="@dimen/size_16dp"
                android:textSize="@dimen/size_text16sp"
                android:textColor="@color/hit200_text"
                android:layout_marginTop="@dimen/size_8dp"
                app:layout_constraintTop_toBottomOf="@id/tvSubjectLabel" />

            <TextView
                android:id="@+id/tvDoctorLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_16dp"
                android:text="@string/doctor_name"
                android:textColor="@color/hit600_text"
                android:textSize="@dimen/size_text16sp"
                android:textStyle="bold"
                android:fontFamily="serif"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/etSubject" />

            <EditText
                android:id="@+id/etDoctor"
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_56dp"
                android:layout_marginTop="@dimen/size_8dp"
                android:background="@drawable/edit_background"
                android:hint="@string/doctor_name_hint"
                android:inputType="text"
                android:paddingStart="@dimen/size_16dp"
                android:textColor="@color/hit200_text"
                android:textSize="@dimen/size_text16sp"
                android:gravity="center_vertical"
                app:layout_constraintTop_toBottomOf="@id/tvDoctorLabel" />

            <TextView
                android:id="@+id/tvDateLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_16dp"
                android:text="@string/date_label"
                android:textColor="@color/hit600_text"
                android:textSize="@dimen/size_text16sp"
                android:textStyle="bold"
                android:fontFamily="serif"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/etDoctor" />

            <EditText
                android:id="@+id/etDate"
                android:layout_width="0dp"
                android:layout_height="@dimen/size_56dp"
                android:layout_marginTop="@dimen/size_8dp"
                android:layout_marginEnd="@dimen/size_8dp"
                android:background="@drawable/edit_background"
                android:hint="dd / MM / yy"
                android:inputType="none"
                android:focusable="false"
                android:paddingStart="@dimen/size_16dp"
                android:textColor="@color/hit200_text"
                android:textSize="@dimen/size_text16sp"
                android:padding="@dimen/size_16dp"
                android:gravity="center_vertical"
                android:drawableStart="@drawable/calendar"
                app:layout_constraintEnd_toStartOf="@id/etTime"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvDateLabel" />

            <TextView
                android:id="@+id/tvTimeLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time_picker_label"
                android:textColor="@color/hit600_text"
                android:textSize="@dimen/size_text16sp"
                android:textStyle="bold"
                android:fontFamily="serif"
                app:layout_constraintStart_toStartOf="@id/etTime"
                app:layout_constraintTop_toTopOf="@id/tvDateLabel" />

            <EditText
                android:id="@+id/etTime"
                android:layout_width="0dp"
                android:layout_height="@dimen/size_56dp"
                android:layout_marginStart="@dimen/size_8dp"
                android:background="@drawable/edit_background"
                android:hint="-- : --"
                android:inputType="none"
                android:focusable="false"
                android:padding="@dimen/size_16dp"
                android:textColor="@color/hit200_text"
                android:textSize="@dimen/size_text16sp"
                android:gravity="center_vertical"
                android:drawableStart="@drawable/clock"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/etDate"
                app:layout_constraintTop_toTopOf="@id/etDate" />

            <TextView
                android:id="@+id/tvLocationLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_16dp"
                android:text="@string/location_label"
                android:textColor="@color/hit600_text"
                android:textSize="@dimen/size_text16sp"
                android:textStyle="bold"
                android:fontFamily="serif"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/etDate" />

            <EditText
                android:id="@+id/etLocation"
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_56dp"
                android:layout_marginTop="@dimen/size_8dp"
                android:background="@drawable/edit_background"
                android:inputType="text"
                android:padding="@dimen/size_16dp"
                android:textColor="@color/hit200_text"
                android:textSize="@dimen/size_text16sp"
                android:hint="@string/location_hint"
                android:gravity="center_vertical"
                app:layout_constraintTop_toBottomOf="@id/tvLocationLabel" />

            <TextView
                android:id="@+id/tvPhoneLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_16dp"
                android:text="@string/phone_label"
                android:textColor="@color/hit600_text"
                android:textSize="@dimen/size_text16sp"
                android:textStyle="bold"
                android:fontFamily="serif"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/etLocation" />

            <EditText
                android:id="@+id/etPhone"
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_56dp"
                android:layout_marginTop="@dimen/size_8dp"
                android:background="@drawable/edit_background"
                android:inputType="phone"
                android:paddingStart="@dimen/size_16dp"
                android:textColor="@color/hit200_text"
                android:textSize="@dimen/size_text16sp"
                android:hint="@string/phon_hint"
                android:gravity="center_vertical"
                android:drawableStart="@android:drawable/ic_menu_call"
                app:layout_constraintTop_toBottomOf="@id/tvPhoneLabel" />

            <Button
                android:id="@+id/btnSave"
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_56dp"
                android:text="@string/save_appointment"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/size_48dp"
                android:textSize="@dimen/size_text16sp"
                android:fontFamily="serif"
                android:gravity="center"
                android:background="@drawable/button_selector"
                app:backgroundTint="@null"
                app:layout_constraintTop_toBottomOf="@id/etPhone" />

            <Button
                android:id="@+id/btnCancel"
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_56dp"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/size_16dp"
                android:textSize="@dimen/size_text16sp"
                android:fontFamily="serif"
                android:gravity="center"
                app:backgroundTint="@null"
                android:text="@string/cancel"
                android:textColor="@color/primary_Button"
                android:background="@drawable/role_card_unselected"
                app:layout_constraintTop_toBottomOf="@id/btnSave" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
